fix: Endpoint amizade/adicionar